# zeromcp

./: .gitignore  Dockerfile  README.md
.github/workflows/: publish-csharp.yml  publish-go.yml  publish-java.yml  publish-kotlin.yml  publish-node.yml  publish-php.yml  publish-php.yml.disabled  publish-rust.yml  publish-swift.yml  publish-swift.yml.disabled
java/: README.md  pom.xml
ruby/: Gemfile  README.md  zeromcp-0.1.1.gem  zeromcp.gemspec
ruby/lib/: zeromcp.rb
ruby/test/: test_config.rb  test_pagination.rb  test_prompt_scanner.rb  test_resource_scanner.rb  test_scanner.rb  test_schema.rb  test_server.rb  test_template_matching.rb
ruby/tools/: add.rb  hello.rb
rust/: Cargo.toml  README.md
rust/examples/: bypass_test.rs  chaos_test.rs  credential_test.rs  hello.rs  resource_test.rs  sandbox_test.rs  timeout_test.rs
rust/src/: config.rs  lib.rs  sandbox.rs  schema.rs  server.rs  types.rs
rust/tests/: integration.rs
scripts/: release.sh
tests/chaos/: chaos-http.mjs  chaos-sse.mjs  level2.js  level3.js  run-chaos.js
tests/conformance/: bypass-config.json  bypass-fixtures.json  credential-file-config.json  credential-file-fixtures.json  fixtures.json  http-config-go.json  mock-server.js  multi-dir-config.json  multi-dir-fixtures.json  resource-config-php.json  resource-config-python.json  resource-config-ruby.json  resource-config.json  resource-fixtures.json  run-all.js  run-http.js  runner.js  separator-config.json  separator-fixtures.json  timeout-fixtures.json
tests/performance/: Dockerfile  aggregate-overnight.mjs  mixed-workload.mjs  (+5 more)
(+61 files in other folders)
