[package]
name = "zeromcp"
version = "0.1.0"
edition = "2021"
description = "Zero-config MCP runtime — Rust library"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[[example]]
name = "hello"
path = "examples/hello.rs"
